--- a/tabs.html
+++ b/tabs.html
@@ -63,7 +63,8 @@
 </head>
 <body>
     <div style="float:right;background:black">
-        <a class="nilla" href="#">Voice</a>
+        <a class="nilla" href="#">Voice</a><br/>
+        <button onclick="localStorage.clear();alert('localStorage has been cleared')">Logout</button>
     </div>
     <ul class="tabs">
         <li class="tab-sub">-</li>
