--- a/chat.html
+++ b/chat.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <!--<link rel="manifest" href="manifest.json" />-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=League+Gothic&display=swap">
+    <!--<link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=League+Gothic&display=swap">-->
+    <link href='https://fonts.googleapis.com/css?family=Bilbo' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
         textarea {
             font-size: larger;
-            font-family: 'League Gothic', sans-serif;
+            font-family: 'Bilbo'
             background-color: #B3C0B7;
         }
         body, html {
