--- a/chat.html
+++ b/chat.html
@@ -9,7 +9,7 @@
     <style>
         textarea {
             font-size: larger;
-            font-family: 'Bilbo'
+            font-family: 'Bilbo';
             background-color: #B3C0B7;
         }
         body, html {
