--- a/chat.html
+++ b/chat.html
@@ -16,7 +16,7 @@
             margin: 0;
             height: 100%;
             font-size: larger;
-            font-family: 'League Gothic', sans-serif;
+            font-family: 'Bilbo';
             background: black;
             color: white;
         }
