add voice to vanilla chat gpt when double click text area

--- a/tabs.html
+++ b/tabs.html
@@ -91,7 +91,7 @@
                 src = src2;
             } else {
                 nilla.textContent = "Nilla";
-                src = "https://raw.githack.com/casualwriter/vanilla-chatgpt/main/source/index.html"
+                src = "nilla.html"
             }
         });
         //const $all = sel => document.querySelectorAll(sel);
