--- a/chat.html
+++ b/chat.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="utf-8" />
     <!--<link rel="manifest" href="manifest.json" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=League+Gothic&display=swap">-->
-    <link href='https://fonts.googleapis.com/css?family=Bilbo' rel='stylesheet'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=League+Gothic&display=swap">
+    <link href='https://fonts.googleapis.com/css?family=Bilbo' rel='stylesheet'>-->
+    <link href="https://fonts.cdnfonts.com/css/amiga-forever" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
         textarea {
             font-size: larger;
-            font-family: 'Bilbo';
+            font-family: 'Amiga Forever', sans-serif;
             background-color: #B3C0B7;
         }
+
         body, html {
             margin: 0;
             height: 100%;
             font-size: larger;
-            font-family: 'Bilbo';
+            font-family: 'Amiga Forever', sans-serif;
             background: black;
             color: white;
         }
