--- a/chat.html
+++ b/chat.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8" />
     <!--<link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=League+Gothic&display=swap">
-    <link href='https://fonts.googleapis.com/css?family=Bilbo' rel='stylesheet'>-->
-    <link href="https://fonts.cdnfonts.com/css/amiga-forever" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Bilbo' rel='stylesheet'>
+    <link href="https://fonts.cdnfonts.com/css/amiga-forever" rel="stylesheet">-->
+    <link href="https://fonts.cdnfonts.com/css/quake-dpquake" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
         textarea {
             font-size: larger;
-            font-family: 'Amiga Forever', sans-serif;
+            font-family: 'DpQuake', sans-serif;
             background-color: #B3C0B7;
         }
 
@@ -18,7 +19,7 @@
             margin: 0;
             height: 100%;
             font-size: larger;
-            font-family: 'Amiga Forever', sans-serif;
+            font-family: 'DpQuake', sans-serif;
             background: black;
             color: white;
         }
