--- a/chat.html
+++ b/chat.html
@@ -5,21 +5,22 @@
     <!--<link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=League+Gothic&display=swap">
     <link href='https://fonts.googleapis.com/css?family=Bilbo' rel='stylesheet'>
-    <link href="https://fonts.cdnfonts.com/css/amiga-forever" rel="stylesheet">-->
-    <link href="https://fonts.cdnfonts.com/css/quake-dpquake" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/amiga-forever" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/quake-dpquake" rel="stylesheet">-->
+    <link href="https://fonts.cdnfonts.com/css/perfect-dos-vga-437" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
         textarea {
             font-size: larger;
-            font-family: 'DpQuake', sans-serif;
+            font-family: 'Perfect DOS VGA 437', sans-serif;
             background-color: #B3C0B7;
         }
-
+        button { font-family: 'Perfect DOS VGA 437', sans-serif; }
         body, html {
             margin: 0;
             height: 100%;
             font-size: larger;
-            font-family: 'DpQuake', sans-serif;
+            font-family: 'Perfect DOS VGA 437', sans-serif;
             background: black;
             color: white;
         }
