--- a/html/breakout.html
+++ b/html/breakout.html
@@ -31,8 +31,8 @@
 		var leftPressed = false;
 
 		// Set up the blocks
-		var blockRowCount = 3;
-		var blockColumnCount = 5;
+		var blockRowCount = 5;
+		var blockColumnCount = 8;
 		var blockWidth = 75;
 		var blockHeight = 20;
 		var blockPadding = 10;
@@ -42,7 +42,7 @@
 		for(var c=0; c<blockColumnCount; c++) {
 			blocks[c] = [];
 			for(var r=0; r<blockRowCount; r++) {
-				blocks[c][r] = { x: 0, y: 0, status: 1 };
+				blocks[c][r] = { x: 0, y: 0, status: 1, color: getRandomColor() };
 			}
 		}
 
@@ -50,7 +50,7 @@
 		var points = 0;
 
 		// Set up the background music
-		var music = new Audio('music.mid');
+		var music = new Audio('audio/music.mid');
 		music.loop = true;
 		music.play();
 
@@ -83,7 +83,7 @@
 						blocks[c][r].y = blockY;
 						ctx.beginPath();
 						ctx.rect(blockX, blockY, blockWidth, blockHeight);
-						ctx.fillStyle = "#0095DD";
+						ctx.fillStyle = blocks[c][r].color;
 						ctx.fill();
 						ctx.closePath();
 					}
@@ -149,6 +149,16 @@
 			if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
 				dx = -dx;
 			}
+		}
+		
+		// Generate random color
+		function getRandomColor() {
+			var letters = "0123456789ABCDEF";
+			var color = "#";
+			for (var i = 0; i < 6; i++) {
+				color += letters[Math.floor(Math.random() * 16)];
+			}
+			return color;
 		}
 
 		// Draw the score
