--- a/html/breakout.html
+++ b/html/breakout.html
@@ -57,7 +57,7 @@
 		var points = 0;
 
 		// Set up the background music
-		var music = new Audio('audio/music.mid');
+		var music = new Audio('music.mid');
 		music.loop = true;
 		music.play();
 
