--- a/html/breakout.html
+++ b/html/breakout.html
@@ -44,7 +44,7 @@ I apologize for the mistake. Here is the updated code with the ball logic fixed 
 		function startGame() {
 			if (!gameStarted) {
 				gameStarted = true;
-				music = new Audio('audio/music.mid');
+				music = new Audio('music.mid');
 				music.loop = true;
 				music.play();
 			}
