--- a/chat.html
+++ b/chat.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
         textarea {
-            font-size: larger;
+            font-size: large;
             font-family: 'Perfect DOS VGA 437', sans-serif;
             background-color: #B3C0B7;
         }
@@ -19,7 +19,7 @@
         body, html {
             margin: 0;
             height: 100%;
-            font-size: larger;
+            font-size: large;
             font-family: 'Perfect DOS VGA 437', sans-serif;
             background: black;
             color: white;
