--- a/chat.html
+++ b/chat.html
@@ -146,7 +146,7 @@ ${r}`);
 
         const openAiSend = async (input, output, token) => {
             let system = [];
-            if (codeCbx.checked) system.push({ "role": "system", "content": "Write HTML and JS only.No comments or explanation.Put script tag in the body." });
+            if (codeCbx.checked) system.push({ "role": "system", "content": "write HTML+JS ONLY.Put script in body.Use one-liners and lamdas to save space." });
             const response = await fetch('https://api.openai.com/v1/chat/completions', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${token}` },
