--- a/html/breakout.html
+++ b/html/breakout.html
@@ -44,9 +44,17 @@ I apologize for the mistake. Here is the updated code with the ball logic fixed 
 		function startGame() {
 			if (!gameStarted) {
 				gameStarted = true;
-				music = new Audio('music.mid');
-				music.loop = true;
-				music.play();
+				//music = new Audio('music.mid');
+				//music.loop = true;
+				//music.play();
+				//Audio only plays mp3s and stuff
+				navigator.requestMIDIAccess().then(midiAccess => {
+				  const outputs = midiAccess.outputs.values();
+				  const output = outputs.next().value;
+				  const player = new MidiPlayer.Player(event => output.send(event.message));
+				  player.loadFile('music.mid');
+				  player.play({loop: true});
+				});
 			}
 		}
 
